apps/overlays/lldap/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  template:
    spec:
      containers:
        - name: lldap
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 100Mi
