apps/overlays/lldap/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`users.starsystem.dev`)
      kind: Rule
      services:
        - name: lldap
          port: 17170
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: lldap-ldap
spec:
  entryPoints:
    - ldap
  routes:
    - match: HostSNI(`*`)
      services:
        - name: lldap
          port: 3890
